[tool.poetry]
name = "helm-charts-updater"
version = "0.4.2"
description = "A tool that will update helm charts in a given repository"
authors = ["Vadim Gedz <vadims@linux-tech.io>"]

[tool.poetry.dependencies]
python = "^3.10"
semver = "^3.0.0"
GitPython = "^3.1.41"
environs = "^14.0.0"
pydantic = "^2.0.0"
prettytable = "^3.8.0"
ruamel-yaml = "^0.18.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
helm-charts-updater = "helm_charts_updater.main:main"
