[tool.poetry]
name = "helm-charts-updater"
version = "0.4.3"
description = "A tool that will update helm charts in a given repository"
authors = ["Vadim Gedz <vadims@linux-tech.io>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/shini4i/helm-charts-updater"
keywords = ["helm", "kubernetes", "charts", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]

[tool.poetry.dependencies]
python = "^3.13"
semver = "^3.0.4"
semantic_version = "^2.10.0"
GitPython = "^3.1.46"
environs = "^14.5.0"
pydantic = "^2.12.0"
prettytable = "^3.17.0"
ruamel-yaml = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
mypy = "^1.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
helm-charts-updater = "helm_charts_updater.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_single_line = true
line_length = 100

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["helm_charts_updater"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
